# jukebox

./: .gitignore  CMakeLists.txt  Doxyfile  PREVmain.c  README.md  main.c  minecraft_cancion_1.mid
3D/: base.stl  circuit_board.stl  cover.stl
Songs/: march.mid  megalovania.mid
common/: CMakeLists.txt
common/Songs/: arduinoToC.py  drums.txt  glockenspiel.txt  transformerV4.py  trombone.txt  trumpet.txt
common/include/: buzzer_director.h  fsm_button.h  fsm_buzzer.h  fsm_jukebox.h  fsm_lcd.h  fsm_usart.h  header.h  lcd_controller.h  melodies.h
common/src/: buzzer_director.c  fsm_button.c  fsm_buzzer.c  fsm_jukebox.c  fsm_lcd.c  fsm_usart.c  imperial_march_star_wars.mid  lcd_controller.c  melodies.c  miditoarduino.py  source.c  transformer.py  transformerV2.py
docs/html/: CMakeCCompilerId_8c_source.html  annotated.html  annotated_dup.js  classes.html  dir_0761876bdd9623d23e9fa2e3e038142f.html  dir_0761876bdd9623d23e9fa2e3e038142f.js  dir_0a99eca4ad03b457e5e47617accbd589.html  dir_0a99eca4ad03b457e5e47617accbd589.js  dir_11fbc4217d50ab21044e5ad6614aede5.html  dir_11fbc4217d50ab21044e5ad6614aede5.js  dir_20e759ec8232d97ed3d961a84fe52581.html  dir_20e759ec8232d97ed3d961a84fe52581.js  dir_22dd4805dcaa9fe6f3cefda4d9a662b9.html  dir_22dd4805dcaa9fe6f3cefda4d9a662b9.js  dir_27d6d8145814d08ea68218b6d44d943e.html  dir_27d6d8145814d08ea68218b6d44d943e.js  dir_307dc36b2c20a7198208bc462db47049.html  dir_307dc36b2c20a7198208bc462db47049.js  dir_3260ae06351dc4f2b22f104157d3e267.html  dir_3260ae06351dc4f2b22f104157d3e267.js  dir_3410de95533d718d50dc8469f4e370d0.html  dir_39cb0360f0d077fc4e376074f4b87fe0.html  dir_39cb0360f0d077fc4e376074f4b87fe0.js  dir_3b0564ba008ed7f16c97349616049101.html  dir_3b0564ba008ed7f16c97349616049101.js  dir_45b9293d3daaa82c00b5908f14ebb805.html  dir_461922fef1544fcd9d2d6119f8d7a7c3.html  dir_461922fef1544fcd9d2d6119f8d7a7c3.js  dir_47155a1c469a1fc1f090c615c05f5679.html  dir_47155a1c469a1fc1f090c615c05f5679.js  dir_4e4d22e38ca4e2e8207825ee2d00bc54.html  dir_4e4d22e38ca4e2e8207825ee2d00bc54.js  dir_5e2718fdc9e7eb73445c3bbeda6e982f.html  dir_5e2718fdc9e7eb73445c3bbeda6e982f.js  dir_651562d8bf6cfd3e81eff5b570d7df50.html  dir_651562d8bf6cfd3e81eff5b570d7df50.js  dir_6e62aed678d3e714cf26e7ef25fa5e2f.html  dir_6e62aed678d3e714cf26e7ef25fa5e2f.js  dir_70e571bddc0e54f7ffcb264f40bab90a.html  dir_70e571bddc0e54f7ffcb264f40bab90a.js  (+149 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  (+34 more)
port/: CMakeLists.txt
port/stm32f4/: CMakeLists.txt
port/stm32f4/include/: liquidcrystal_i2c.h  main.h  port_button.h  port_buzzer.h  port_system.h  port_usart.h
port/stm32f4/src/: LCDmain.c  interr.c  liquidcrystal_i2c.c  mainLCDexample.c  port_button.c  port_buzzer.c  port_system.c  port_usart.c  stm32f4xx_hal_msp.c  syscalls.c
test/: CMakeLists.txt
test/integration/: CMakeLists.txt  test_v1.c  test_v2.c  test_v3.c
test/unit/: CMakeLists.txt  _test_template.c  test_fsm_button.c  test_fsm_buzzer.c  test_fsm_uart.c  test_port_buzzer.c
test/unit/stm32f4/: CMakeLists.txt  test_port_button.c  test_port_uart.c
web_server/: app.js  package-lock.json  package.json
web_server/controllers/: pages.js  serial.js
web_server/public/css/: base.css  index.css  player.css
web_server/public/js/: player.js
web_server/routes/: jukebox.js
web_server/views/: index.ejs  player.ejs
