# Common unit tests (valid for all platforms)
FILE(GLOB TEST_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ./test_*.c)
FOREACH(TEST_SOURCE ${TEST_SOURCES})
    # Rule to build unit tests
    GET_FILENAME_COMPONENT(TEST_NAME ${TEST_SOURCE} NAME_WE)
    ADD_EXECUTABLE(${TEST_NAME} ${TEST_SOURCE} ${PROJECT_ISR_SOURCES})
    IF(DEFINED PLATFORM_EXTENSION)
        SET_TARGET_PROPERTIES(${TEST_NAME} PROPERTIES SUFFIX ${PLATFORM_EXTENSION})
    ENDIF()
    TARGET_LINK_LIBRARIES(${TEST_NAME} unity) # Link Unity test framework
    
    # Rule to flash unit test (only if OpenOCD configuration file is specified)
    IF(DEFINED OPENOCD_CONFIG_FILE)
        ADD_CUSTOM_TARGET(flash-${TEST_NAME}
            DEPENDS ${TEST_NAME}
            COMMAND ${OPENOCD_EXECUTABLE} -f ${OPENOCD_CONFIG_FILE} -c "program ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${TEST_NAME}${PLATFORM_EXTENSION} verify reset exit"
            COMMENT "Flashing ${TEST_NAME} to target")
    ENDIF()
    IF(PLATFORM STREQUAL "native")
        ADD_TEST(NAME ${TEST_NAME} COMMAND ${TEST_NAME} WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../../bin/${PLATFORM}/${CMAKE_BUILD_TYPE})
    ENDIF()
ENDFOREACH(TEST_SOURCE)
